[project]
name = "python-template"
version = "0.1.0"
description = "A Python project template with Telegram bot support"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"

dependencies = [
    "pytelegrambotapi>=4.26.0",  # Pour la gestion de ton bot Telegram
    "requests",  # Exemple d'ajout de dépendance pour effectuer des requêtes HTTP
    "flask",  # Si tu as besoin d'une API web ou de services backend
    "dotenv",  # Si tu veux gérer les variables d'environnement via un fichier .env
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
# Si tu utilises Poetry pour la gestion de tes dépendances et du packaging
version = "1.0"